# nokwatch

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  TESTING.md  app.py  config.py  email_service.py  index.html  models.py  monitor.py  notification_service.py  requirements-minimal.txt  requirements.txt  scheduler.py  sitemap.xml  slack_service.py  test_monitor.py
_astro/: api.B6tNbwNf.css  api.C7LGf9dW.css  api.Dwg0e1R4.css
ai/: __init__.py  ai_config.py  smart_detector.py
api/: index.html
auth-and-security/: index.html
configuration/: index.html
core/: __init__.py  config.py  crypto.py  models.py  plugin_registry.py  plugins.py  scheduler.py
deployment/: index.html
docs/: GITHUB_PAGES.md  astro.config.mjs  package.json  tailwind.config.mjs
getting-started/: index.html
installation/: index.html
monitoring/: __init__.py  auth_handler.py  index.html  json_monitor.py  monitor.py
notifications/: index.html
plugins/: index.html
plugins/nokwatch-scan/: README.md  pyproject.toml
plugins/nokwatch-scan/src/nokwatch_scan/: __init__.py  api.py  check_handler.py  listing_extractor.py  migrations.py  routes.py
plugins/nokwatch-scan/src/nokwatch_scan/templates/scan/: edit.html  list.html  new.html  settings.html
services/: __init__.py  diff_service.py  discord_service.py  email_service.py  notification_service.py  screenshot_service.py  slack_service.py  statistics_service.py  template_service.py
templates/: base.html  index.html  modules.html  monitor_templates.json
templates-and-smart-setup/: index.html
tests/: __init__.py  (+12 more)
(+26 files in other folders)
